--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,19 @@
 
 buildscript {
     ext.kotlin_version = '1.2.61'
+
     repositories {
         google()
         jcenter()
-    }
+        maven {
+                 url 'https://maven.google.com'
+             }
+
+        }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
