refactor class Oauth

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OauthGoogle"></activity>
+        <activity android:name=".Oauth"></activity>
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
