--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.4'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.facebook.android:facebook-login:[4,5)'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
 }
 apply plugin: 'com.google.gms.google-services'
